:construction: favourites: add rough implementation of the feature
