# pkg/movies/routes.go
@@ -7,4 +7,5 @@ import (
 
 func setupRoutes(r fiber.Router) {
 	r.Get("/movies", users.Can("movies:index"), IndexMovies)
+	r.Post("/movies/favourite", users.Can("movies:favourite"), FavouriteMovie)
 }
